Changes for 1.8.0.3
* Some updates for 'Great War' world war 1 map, and Pact of Steel 2. (veqryn)

* Possible fix for "Could not stop delegate execution" bug. (veqryn)

* Fixed possible bug where a corrupted game save had the initialization delegate get called more than once. (veqryn)

* Adding a new AI called "Hard AI". Also renamed AI's: EZ Fodder -> Easy AI, Moore N Able -> Medium AI, Dynamix -> Land Only AI. (redrum)

* Fix for infinite crash-reload loop on loading a corrupt autosave on a host bot. (veqryn)

* Fixed issue with Victory trigger not being able to use html properly. (veqryn)

* Fixed illegal state exception error in landing paratroopers during a battle. (veqryn)

* Possibly final fix for a game hang / frozen bot on game launch. (veqryn)


Changes for 1.8.0.1
* Adding new sci-fi sound for "future" era. (pulicat, cernel, veqryn)

* Allowing "NONE" as a valid option value in sounds.properties file. (veqryn)

* Fixed null pointer exception in Moore AI for water based factories. (veqryn)

* Fixed bid delegate so that it will still run even if the player has no resources other than the bid amount. (veqryn)

* Fixed possible null pointer exception in Triggered Victory which is triggered from outside of the end round delegate. (veqryn)

* Making TransportTracker a static implementation to clean up the engine a little bit. (veqryn)

* Fixing various bugs in Global 1940, ww2v3, v4, v5, and v6. (veqryn)

* Created new Player Rule Attachment, "immuneToBlockade", which will prevent blockade production loss for that player. (veqryn)

* Allowed 1940's paratroopers tech (ariborne combat) to move to / attack territories that have been blitz or already conquered this turn. (veqryn)

* Allowed 1940's paratroopers tech (airborne combat) to move from allied bases, and to allow travel over water. (veqryn)

* Created new step properties for special move delegates, "airborneMove", which controls if it is an Airborne Combat move phase. (veqyrn)
